# rust_verifier_gui

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  constants.js  main.css  tauri_commands.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: directory.rs  main.rs  verifications.rs
src/components/: DirectorySelection.vue  HeaderFrame.vue  InformationFrame.vue  VerificationItem.vue  VerificationList.vue
src/components/utils/: CollapseElement.vue  DebugInformation.vue
src/composables/: application.js  directory.js  timer.js  verifications.js
